logs/Slang/generated/keywords/5.6.2--keyword_priority.sv.log
name: priority
description: The 'priority' keyword should be reserved
should_fail: 1
tags: 5.6.2
files: /home/travis/build/SymbiFlow/sv-tests/tests/generated/keywords/5.6.2--keyword_priority.sv
incdirs: 
top_module: 
rc: 1

../../home/travis/build/SymbiFlow/sv-tests/tests/generated/keywords/5.6.2--keyword_priority.sv:8:8: error: expected declarator
    bit priority;
       ^
../../home/travis/build/SymbiFlow/sv-tests/tests/generated/keywords/5.6.2--keyword_priority.sv:8:9: error: expected member
    bit priority;
        ^~~~~~~~
